# model-serving

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  encode_img.py  pyproject.toml  stats.py
.github/workflows/: code_check.yaml
images/: rime_5868.json
onnx_serving/: Dockerfile  main.py  pyproject.toml
onnx_serving/src/: models.py
rust_onnx_serving/: Cargo.toml  Dockerfile  main.rs
scripts/: benchmark.sh  load.sh  measure_startup.sh  span_exports.sh  start_times.sh
torch_serving/: Dockerfile  main.py  pyproject.toml
torch_serving/src/: models.py
