[tool.poetry]
name = "model-serving"
version = "0.1.0"
description = "A comprehensive guide for implementing efficient and lightweight model serving."
authors = ["Martynas Subonis <martynas.subonis@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
prettytable = "3.11.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.7"
mypy = "1.11.2"

[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.ruff]
line-length = 150

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
